k8s/gateway_api/http_route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: hello-world-app-http-route
  namespace: kong
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ui
      backendRefs:
        - name: hello-world-app-service
          namespace: default
          port: 5000
